iml-services/iml-device/src/virtual_device/snapshots/iml_device__virtual_device__tests__full_oss_commands_test_2_oss1.local_10.snap
---
source: iml-services/iml-device/src/virtual_device/mod.rs
expression: c
---
{
  "ScsiDevice": {
    "serial": "3600140527c9b91c8ef0473d88301fc4d",
    "scsi80": "SLIO-ORG ost8            27c9b91c-8ef0-473d-8830-1fc4d555064d",
    "major": "65",
    "minor": "192",
    "devpath": "/devices/platform/host5/session4/target5:0:0/5:0:0:7/block/sdac",
    "size": 5368709120,
    "filesystem_type": "mpath_member",
    "fs_uuid": "14746670894678276271",
    "fs_label": "ost17",
    "paths": [
      "/dev/disk/by-id/scsi-3600140527c9b91c8ef0473d88301fc4d",
      "/dev/disk/by-id/wwn-0x600140527c9b91c8ef0473d88301fc4d",
      "/dev/disk/by-path/ip-10.73.50.10:3260-iscsi-iqn.2015-01.com.whamcloud.lu:oss-lun-7",
      "/dev/disk/by-label/ost17",
      "/dev/disk/by-uuid/14746670894678276271",
      "/dev/sdac"
    ],
    "mount": null,
    "children": [
      {
        "Mpath": {
          "devpath": "/devices/virtual/block/dm-13",
          "serial": "3600140527c9b91c8ef0473d88301fc4d",
          "scsi80": "SLIO-ORG ost8            27c9b91c-8ef0-473d-8830-1fc4d555064d",
          "dm_name": "mpathr",
          "size": 5368709120,
          "major": "253",
          "minor": "13",
          "filesystem_type": "zfs_member",
          "fs_uuid": "14746670894678276271",
          "fs_label": "ost17",
          "paths": [
            "/dev/mapper/mpathr",
            "/dev/disk/by-id/dm-name-mpathr",
            "/dev/disk/by-id/dm-uuid-mpath-3600140527c9b91c8ef0473d88301fc4d",
            "/dev/disk/by-label/ost17",
            "/dev/disk/by-uuid/14746670894678276271",
            "/dev/dm-13"
          ],
          "children": [],
          "mount": null
        }
      }
    ]
  }
}
