iml-services/iml-device/src/virtual_device/snapshots/iml_device__virtual_device__tests__full_oss_commands_test_2_oss1.local_17.snap
---
source: iml-services/iml-device/src/virtual_device/mod.rs
expression: c
---
{
  "ScsiDevice": {
    "serial": "360014055b61517522ae49d3bd8a5eaf1",
    "scsi80": "SLIO-ORG ost3            5b615175-22ae-49d3-bd8a-5eaf13c5fb9f",
    "major": "66",
    "minor": "80",
    "devpath": "/devices/platform/host4/session3/target4:0:0/4:0:0:2/block/sdal",
    "size": 5368709120,
    "filesystem_type": "mpath_member",
    "fs_uuid": "4682411481519408277",
    "fs_label": "ost12",
    "paths": [
      "/dev/disk/by-id/scsi-360014055b61517522ae49d3bd8a5eaf1",
      "/dev/disk/by-id/wwn-0x60014055b61517522ae49d3bd8a5eaf1",
      "/dev/disk/by-path/ip-10.73.40.10:3260-iscsi-iqn.2015-01.com.whamcloud.lu:oss-lun-2",
      "/dev/disk/by-label/ost12",
      "/dev/disk/by-uuid/4682411481519408277",
      "/dev/sdal"
    ],
    "mount": null,
    "children": [
      {
        "Mpath": {
          "devpath": "/devices/virtual/block/dm-18",
          "serial": "360014055b61517522ae49d3bd8a5eaf1",
          "scsi80": "SLIO-ORG ost3            5b615175-22ae-49d3-bd8a-5eaf13c5fb9f",
          "dm_name": "mpathm",
          "size": 5368709120,
          "major": "253",
          "minor": "18",
          "filesystem_type": "zfs_member",
          "fs_uuid": "4682411481519408277",
          "fs_label": "ost12",
          "paths": [
            "/dev/mapper/mpathm",
            "/dev/disk/by-id/dm-name-mpathm",
            "/dev/disk/by-id/dm-uuid-mpath-360014055b61517522ae49d3bd8a5eaf1",
            "/dev/disk/by-label/ost12",
            "/dev/disk/by-uuid/4682411481519408277",
            "/dev/dm-18"
          ],
          "children": [],
          "mount": null
        }
      }
    ]
  }
}
