iml-services/iml-device/src/virtual_device/snapshots/iml_device__virtual_device__tests__full_oss_commands_test_2_oss1.local_6.snap
---
source: iml-services/iml-device/src/virtual_device/mod.rs
expression: c
---
{
  "ScsiDevice": {
    "serial": "3600140515d4c1ba1656411f81b68a745",
    "scsi80": "SLIO-ORG ost10           15d4c1ba-1656-411f-81b6-8a7455b27193",
    "major": "65",
    "minor": "128",
    "devpath": "/devices/platform/host5/session4/target5:0:0/5:0:0:9/block/sdy",
    "size": 5368709120,
    "filesystem_type": "mpath_member",
    "fs_uuid": "6930704891261189801",
    "fs_label": "ost19",
    "paths": [
      "/dev/disk/by-id/scsi-3600140515d4c1ba1656411f81b68a745",
      "/dev/disk/by-id/wwn-0x600140515d4c1ba1656411f81b68a745",
      "/dev/disk/by-path/ip-10.73.50.10:3260-iscsi-iqn.2015-01.com.whamcloud.lu:oss-lun-9",
      "/dev/disk/by-label/ost19",
      "/dev/disk/by-uuid/6930704891261189801",
      "/dev/sdy"
    ],
    "mount": null,
    "children": [
      {
        "Mpath": {
          "devpath": "/devices/virtual/block/dm-11",
          "serial": "3600140515d4c1ba1656411f81b68a745",
          "scsi80": "SLIO-ORG ost10           15d4c1ba-1656-411f-81b6-8a7455b27193",
          "dm_name": "mpatht",
          "size": 5368709120,
          "major": "253",
          "minor": "11",
          "filesystem_type": "zfs_member",
          "fs_uuid": "6930704891261189801",
          "fs_label": "ost19",
          "paths": [
            "/dev/mapper/mpatht",
            "/dev/disk/by-id/dm-name-mpatht",
            "/dev/disk/by-id/dm-uuid-mpath-3600140515d4c1ba1656411f81b68a745",
            "/dev/disk/by-label/ost19",
            "/dev/disk/by-uuid/6930704891261189801",
            "/dev/dm-11"
          ],
          "children": [],
          "mount": null
        }
      }
    ]
  }
}
